[2.7] bpo-32137: The repr of deeply nested dict now raises a RecursionError (GH-4570) instead of crashing due to a stack overflow.

This perhaps will fix similar problems in other extension types.
(cherry picked from commit 1fb72d2ad243c965d4432b4e93884064001a2607)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>